[gd_scene load_steps=3 format=2]

[ext_resource path="res://space_actors/Actor.gd" type="Script" id=1]
[ext_resource path="res://space_actors/HPSystem.tscn" type="PackedScene" id=2]

[node name="Actor" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionArea" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="CollisionArea"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HPSystem" parent="." instance=ExtResource( 2 )]

[node name="Sounds" type="Node" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
[connection signal="body_entered" from="CollisionArea" to="." method="handle_collision"]
[connection signal="Dead" from="HPSystem" to="." method="_on_HPSystem_Dead"]
[connection signal="HPUpdated" from="HPSystem" to="." method="_on_HPSystem_HPUpdated"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
